tests/init/neg/early-promote2.scala
class M {
  println(this)       // error
  foo()
  private val a = 5   // error
  def foo() = a
}
